<resources>
    <string name="app_name">Belajar Android</string>
    <string name="email_hint">Input Email</string>
    <string name="text_login">Login</string>

    <string-array name="list_string">
        <item>Macbook</item>
        <item>Iphone</item>
        <item>Ipad</item>
        <item>Iwatch</item>
    </string-array>

    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="search_text_gojek">Cari makanan, layanan, &amp; tujuan</string>
    <string name="nominal_gopay_tokped">Rp109.048</string>
    <string name="cek_riwayat_gopay"><![CDATA[Klik & cek riwayat]]></string>
    <string name="text_bayar">Bayar</string>
    <string name="text_isi_saldo">Isi Saldo</string>
    <string name="text_eksplor">Eksplor</string>
    <string name="text_goride">GoRide</string>
    <string name="text_gocar">GoCar</string>
    <string name="text_gofood">GoFood</string>
    <string name="gosend">GoSend</string>
    <string name="text_gomart">GoMart</string>
    <string name="text_gopulsa">GoPulsa</string>
    <string name="text_pedulilindungi">Check In</string>
    <string name="text_others">Lainnya</string>
    <string name="text_goclub">193 XP lagi ada harta karun</string>
    <string name="text_clock">Harta Karun bentar lagi hilang</string>
    <string name="text_gojek">Akses cepat</string>
    <string name="text_voucher">Ada voucher nganggur, nih</string>
    <string name="text_restaurant">Restoran terdekat</string>
    <string name="content_title">Gojek lagi baik hati!</string>
    <string name="content_text">Nikmati diskon hingga 90% GoRide dan GoFood pakai kode voucher \'GOJEKINAJA\'</string>
    <string name="text_icon_home">Beranda</string>
    <string name="text_icon_promo">Promo</string>
    <string name="text_icon_order">Pesanan</string>
    <string name="text_icon_chat">Chat</string>
    <string name="search_text_tokped">Cari earphone blutooth</string>
    <string name="user_address">Dikirim ke Rumah Rafly Raihan</string>
    <string name="nominal_gopay">Rp109.048</string>
    <string name="nominal_coins">164.433 Coins</string>
    <string name="user_member">Member Gold</string>
    <string name="user_coupon">23 Kupon</string>
    <string name="text_official_store">Official Store</string>
    <string name="text_see_all">Lihat Semua</string>
    <string name="text_daily_supply">Kebutuhan Harian</string>
    <string name="text_phone"><![CDATA[Handphone & Gadget]]></string>
    <string name="text_bill"><![CDATA[Top-Up & Tagihan]]></string>
    <string name="text_money">Keuangan</string>
    <string name="text_travel"><![CDATA[Pesawat & Travel]]></string>
    <string name="text_accessories"><![CDATA[Aksesoris & Elektronik]]></string>
    <string name="text_pedulilindungi_tokped">Peduli Lindungi</string>
    <string name="text_bazaar">Bazaar Hari Ini</string>
    <string name="text_live">Live Shopping</string>
    <string name="text_games">Tokopedia Seru</string>
    <string name="text_cod">Bayar di Tempat</string>
    <string name="text_video">Video menarik untukmu</string>
    <string name="text_video_one">Beli sekarang, langsung kita kirim!</string>
    <string name="user_video_one">Neng geulis</string>
    <string name="count_viewers_one">2,5 rb</string>
    <string name="count_viewers_two">2,0 rb</string>
    <string name="count_viewers_three">1,5 rb</string>
    <string name="text_promo_one">Kupon Spesial</string>
    <string name="text_promo_two">Diskon 85%</string>
    <string name="text_promo_three">Diskon 78%</string>
    <string name="text_video_two">Ngonrol santuy produk baru kuy!</string>
    <string name="text_video_three">Belajar bersama anak jadi lebih seru!</string>
    <string name="user_video_two">Om botak</string>
    <string name="user_video_three">Tante lala</string>
    <string name="text_home_tokped">Home</string>
    <string name="text_icon_feed">Feed</string>
    <string name="text_icon_official">Official Store</string>
    <string name="text_icon_whistlist">Whistlist</string>
    <string name="text_icon_transaction">Transaksi</string>
    <string name="text_discount_tokped">Kejar Diskon</string>
    <string name="text_countdown_tokped">Berakhir dalam</string>
    <string name="text_see_video">Lihat Semua</string>
    <string name="text_countdown">09 menit 26 detik</string>
    <string name="price_flash_sale_one">Rp 310.000</string>
    <string name="real_price_flash_sale_one">Rp 499.000</string>
    <string name="discount_flash_sale_one">38%</string>
    <string name="location_flash_sale_one">Jakarta Barat</string>
    <string name="text_stock_flash_sale">Segera Habis</string>
    <string name="price_flash_sale_two">Rp 109.000</string>
    <string name="discount_flash_sale_two">80%</string>
    <string name="real_price_flash_sale_two">Rp 540.000</string>
    <string name="location_flash_sale_two">Jakarta Pusat</string>
    <string name="price_flash_sale_three">Rp 439.000</string>
    <string name="discount_flash_sale_three">18%</string>
    <string name="real_price_flash_sale_three">Rp 529.000</string>
    <string name="location_flash_sale_three">Jakarta Selatan</string>
</resources>